--- a/MemoryGame.html
+++ b/MemoryGame.html
@@ -23,6 +23,7 @@
                 <button value="3" id="button3" class="button" onclick="recordButtonPress('button3');"></button>
                 <button value="4" id="button4" class="button" onclick="recordButtonPress('button4');"></button>
             </div>
+            <p id="gameOver" class="gameOver">Game Over</p>
             <button id="reset" onclick="location.reload()">Restart</button>
         </section>
     </body>
