--- a/MemoryGame.html
+++ b/MemoryGame.html
@@ -24,6 +24,8 @@
                 <button value="4" id="button4" class="button" onclick="recordButtonPress('button4');"></button>
             </div>
             <p id="gameOver" class="gameOver">Game Over</p>
+            <p id="gameOverText" class="gameOverText">You forgot the order!</p>
+            <p id="gameOverScore" class="gameOverScore"></p>
             <button id="reset" onclick="location.reload()">Restart</button>
         </section>
     </body>
