--- a/MemoryGame.html
+++ b/MemoryGame.html
@@ -10,7 +10,7 @@
     
     <body>  
         <header>
-            <h1 class="title">Memory Game 'still need to make name'</h1>
+            <h1 class="title">Memory Quest</h1>
         </header>
 
         <section>
