--- a/MemoryGame.html
+++ b/MemoryGame.html
@@ -23,10 +23,13 @@
                 <button value="3" id="button3" class="button" onclick="recordButtonPress('button3');"></button>
                 <button value="4" id="button4" class="button" onclick="recordButtonPress('button4');"></button>
             </div>
-            <p id="gameOver" class="gameOver">Game Over</p>
-            <p id="gameOverText" class="gameOverText">You forgot the order!</p>
-            <p id="gameOverScore" class="gameOverScore"></p>
-            <button id="reset" onclick="location.reload()">Restart</button>
+
+            <div class="gameOverDiv" id="gameOverDiv">
+                <p id="gameOver" class="gameOver">Game Over</p>
+                <p id="gameOverText" class="gameOverText">You forgot the order!</p>
+                <p id="gameOverScore" class="gameOverScore"></p>
+                <button id="reset" onclick="location.reload()">Restart</button>
+            </div>
         </section>
     </body>
 </html>
