--- a/MemoryGame.html
+++ b/MemoryGame.html
@@ -1,6 +1,7 @@
 <html>
     <head>
-        <title>Home</title>
+        <title>Memory Quest</title>
+        <link rel="icon" href="logo.png">
         <link rel="stylesheet" href="MemoryGame.css">
         <script src="MemoryGame.js"></script>
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -30,6 +31,8 @@
                 <p id="gameOverScore" class="gameOverScore"></p>
                 <button id="reset" onclick="location.reload()">Restart</button>
             </div>
+
+            <p class="copyright">&copy; 2025 Memory Quest</p>
         </section>
     </body>
 </html>
